<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_CodeBATCH" Id="{b3129944-4ddb-4b5f-9ef9-b6e719024768}">
    <Declaration><![CDATA[ TYPE T_CodeBATCH : STRING[10];
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>