<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_CodeGTIN" Id="{abbb6353-941f-487b-bb4d-e72d13c81c3c}">
    <Declaration><![CDATA[TYPE T_CodeGTIN : STRING[20];
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>