<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="T_CodeRSKU" Id="{7927ffe6-e972-49cd-aa84-bc1095157dcb}">
    <Declaration><![CDATA[ TYPE T_CodeRSKU : STRING[9];
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>